<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Currency Convertor</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="from_currency">From Currency</string>
    <string name="to_currency">To Currency</string>
    <string name="convert">Convert</string>
    <string name="err101">Required</string>
    <string name="currency_code">Currency Code</string>
    <string name="title_activity_currency_code">Currency Code</string>
    <string name="label1">Label 1</string>
    <string name="label2">Label 2</string>
    <string name="malaysia">Malaysia</string>
    <string name="united_states">United States</string>
    <string name="singapore">Singapore</string>
    <string name="thailand">Thailand</string>
    <string name="myr">MYR</string>
    <string name="usd">USD</string>
    <string name="sgd">SGD</string>
    <string name="thb">THB</string>

</resources>